# framekit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/framekit/: __init__.py  __main__.py
src/framekit/commands/: cleanmkv.py  doctor.py  inspect.py  language.py  main.py  metadata.py  nfo.py  pipeline.py  prez.py  renamer.py  settings.py  setup.py  torrent.py
src/framekit/core/: diagnostics.py  exceptions.py  http.py  i18n.py  languages.py  mediainfo.py  naming.py  paths.py  release_inspection.py  reporting.py  settings.py  subtitles.py  tools.py  warnings.py
src/framekit/core/models/: __init__.py  cleanmkv.py  media.py  metadata.py  nfo.py  renamer.py
src/framekit/locales/: __init__.py  en.json  es.json  fr.json
src/framekit/modules/: __init__.py
src/framekit/modules/cleanmkv/: __init__.py  planner.py  presets.py  remuxer.py  scanner.py  service.py  tracks.py  wizard.py
src/framekit/modules/metadata/: __init__.py  base.py  cache.py  choices.py  config.py  factory.py  ui.py  (+6 more)
src/framekit/ui/: branding.py  console.py  progress.py  selector.py
tests/: conftest.py  test_cleanmkv.py  test_cleanmkv_command.py  test_cleanmkv_output_dir.py  test_cleanmkv_remuxer.py  test_cleanmkv_scanner.py  test_cleanmkv_track_references.py  test_command_helpers.py  test_diagnostics.py  test_episode_completeness.py  test_hdr_detection.py  test_headless_and_redaction.py  test_http.py  test_http_client_request.py  test_i18n.py  test_i18n_alignment.py  test_i18n_new_keys.py  test_language_command.py  test_locale_catalogs.py  test_main_debug_cli.py  test_main_diagnostics_args.py  test_metadata.py  test_metadata_choices.py  test_metadata_config.py  test_metadata_render.py  test_metadata_selector.py  test_metadata_service.py  test_metadata_workflow.py  test_nfo.py  test_nfo_command.py  test_nfo_logo_registry.py  test_nfo_logo_tools.py  test_nfo_template_registry.py  test_nfo_template_selector.py  test_paths.py  test_pipeline_command.py  test_pipeline_payload_workflow.py  test_pipeline_workflow.py  test_prez_service.py  test_release_naming.py  (+11 more)
(+51 files in other folders)
